--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -12,9 +12,9 @@ jobs:
         node-version: [12.6.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
     - name: Codequality stage with Node.js matrix version - ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@master
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
