--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i -g eslint@6.8.0
+    - run: npm ci
     - run: npm run codequality
       env:
         CI: true
